Added copy and images.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,292 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header>
+      <nav class="nav collapsible">
+        <a href="#"
+          ><svg class="icon-company">
+            <use xlink:href="images/sprite.svg#mira"></use></svg
+        ></a>
+        <svg class="icon-social nav__toggler">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="">Features</a></li>
+          <li class="nav__item"><a href="">Plans</a></li>
+          <li class="nav__item">
+            <a href=""><div class="btn">Get Started</div></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="hero">
+      <div class="container">
+        <div class="grid grid--cols-2">
+          <div class="hero__content">
+            <h1>Project Management Optimized</h1>
+            <p class="subtitle--lowercase">
+              Mira is the complete project management platform that teams love
+              to use.
+            </p>
+            <a href="" class="btn">Get Started</a>
+          </div>
+          <div class="hero__images">
+            <div class="profile background--secondary">
+              <img
+                class="profile__image"
+                src="images/jennifer-rodriguez.png"
+                alt=""
+              />
+              <div class="message">
+                <div class="message__body">
+                  <img
+                    class="message__image"
+                    src="images/chris-colson-small-green.jpg"
+                    alt=""
+                  />
+                  <p class="message__text">
+                    Amazing! So glad we’re working together!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="profile background--primary top">
+              <img
+                class="profile__image"
+                src="images/chris-colson.png"
+                alt=""
+              />
+              <div class="message">
+                <div class="message__body">
+                  <img
+                    class="message__image"
+                    src="images/jennifer-rodriguez-small-orange.jpg"
+                    alt=""
+                  />
+                  <p class="message__text">
+                    The project is on track to finish this Friday.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="testimonials container">
+      <div class="logos-wrap">
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#netflix"></use>
+        </svg>
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#microsoft"></use>
+        </svg>
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#google"></use>
+        </svg>
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#youtube"></use>
+        </svg>
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#slack"></use>
+        </svg>
+        <svg class="icon-company">
+          <use xlink:href="images/sprite.svg#amazon"></use>
+        </svg>
+      </div>
+    </section>
+    <main>
+      <section class="features container">
+        <h2 class="features__heading">
+          Project Management Like You’ve<br />Never Experienced Before
+        </h2>
+      </section>
+      <article>
+        <div class="container">
+          <div class="grid grid--cols-2">
+            <div class="features__image-wrap">
+              <img
+                class="features__image"
+                src="images/three-coworkers.jpg"
+                alt=""
+              />
+              <div class="message">
+                <div class="message__body">
+                  <img
+                    class="message__image"
+                    src="images/chris-colson-small-green.jpg"
+                    alt=""
+                  />
+                  <p class="message__text">
+                    Amazing! So glad we’re working together!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="content-wrap">
+              <div class="content">
+                <p class="subtitle">Communicate Better</p>
+                <h3>Collaborate More Effectively</h3>
+                <p>
+                  Easily assign tasks, send and receive notifications from team members and stakeholders. 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="background--light">
+        <div class="container">
+          <div class="grid grid--cols-2">
+            <div class="features__image-wrap">
+              <img
+                class="features__image"
+                src="images/man-laptop.jpg"
+                alt=""
+              />
+              <div class="message">
+                <div class="message__body">
+                  <img
+                    class="message__image"
+                    src="images/chris-colson-small-green.jpg"
+                    alt=""
+                  />
+                  <p class="message__text">
+                    Amazing! So glad we’re working together!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="content-wrap">
+              <div class="content">
+                <p class="subtitle">Third Party Integration</p>
+                <h3>Easily Track Projects</h3>
+                <p>
+                  Connect the different applications you currently use for email, scheduling, meetings and tasks all in one space.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </article>
+      <article>
+        <div class="container">
+          <div class="grid grid--cols-2">
+            <div class="features__image-wrap">
+              <img
+                class="features__image"
+                src="images/two-coworkers-laptop.jpg"
+                alt=""
+              />
+              <div class="message">
+                <div class="message__body">
+                  <img
+                    class="message__image"
+                    src="images/chris-colson-small-green.jpg"
+                    alt=""
+                  />
+                  <p class="message__text">
+                    Amazing! So glad we’re working together!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="content-wrap">
+              <div class="content">
+                <p class="subtitle">Smart Technology</p>
+                <h3>Meet Every Deadline</h3>
+                <p>
+                  Smart technology that identifies where you should be in a project and auto-adjust timelines when you complete a task.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <section class="testimonial">
+        <div class="container">
+          <div class="grid grid--cols-2">
+            <div class="large-profile-wrap">
+              <div class="profile--large background--light">
+                <img class="profile__image--large" src="images/mark-patel.png" alt="" />
+              </div>
+            </div>
+            <div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing posuere ac aliquam et tristique molestie. Neque ac sed nibh commodo viverra ornare lectus. Tellus rhoncus fermentum lacinia viverra augue sollicitudin.</p>
+              <div>
+                <p>Mark Patel</p>
+                <p>Senior Vice President</p>
+                <img src="images/netflix-white.svg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="plans container">
+        <div class="plans-wrap">
+          <div class="plan">
+            <div class="card card--primary">
+              <header class="card__header">
+                <h3 class="plan__name">Pro</h3>
+                <p class="plan__short-description">For hardcore teams</p>
+                <span class="plan__price">$20</span>
+                <span class="plan__billing-cycle">/month</span>
+              </header>
+              <div class="card__body">
+                <ul class="list">
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="plan">
+            <div class="card card--secondary">
+              <header class="card__header">
+                <h3 class="plan__name">Pro</h3>
+                <p class="plan__short-description">For hardcore teams</p>
+                <span class="plan__price">$20</span>
+                <span class="plan__billing-cycle">/month</span>
+                <div class="plan__popular-badge">
+                  <p class="plan__popular-badge-text">Most popular</p>
+                </div>
+              </header>
+              <div class="card__body">
+                <ul class="list">
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                  <li class="plan__feature">Awesome project management tool</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="plan">
+            <div class="card card--primary">
+              <header class="card__header">
+                <h3 class="plan__name">Pro</h3>
+                <p class="plan__short-description">For hardcore teams</p>
+                <span class="plan__price">$20</span>
+                <span class="plan__billing-cycle">/month</span>
+              </header>
+              <div class="card__body">
+                <ul class="list">
+                  <li class="plan__feature">Customizable dashboard and widgets</li>
+                  <li class="plan__feature">Add due date reminders</li>
+                  <li class="plan__feature">Host virtual meetings</li>
+                  <li class="plan__feature">Third party app integration</li>
+                  <li class="plan__feature">Offline mobile and desktop access</li>
+                  <li class="plan__feature">Unlimited users</li>
+                  <li class="plan__feature">Unlimited projects</li>
+                </ul>
+              </div>
+            </div>
+        </div>
+      </section>
+    </main>
     <script src="js/main.js"></script>
   </body>
 </html>
