--- a/index.html
+++ b/index.html
@@ -315,27 +315,27 @@
         <div class="social-footer-wrap">
           <p class="social-icons-caption">Follow us:</p>
           <div class="social-icons">
-            <a href="">
+            <a href="https://www.facebook.com/" target="_blank">
               <svg class="icon-social">
                 <use xlink:href="images/sprite.svg#social-facebook"></use>
               </svg>
             </a>
-            <a href="">
+            <a href="https://twitter.com/" target="_blank">
               <svg class="icon-social">
                 <use xlink:href="images/sprite.svg#social-twitter"></use>
               </svg>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/" target="_blank">
               <svg class="icon-social">
                 <use xlink:href="images/sprite.svg#social-instagram"></use>
               </svg>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/" target="_blank">
               <svg class="icon-social">
                 <use xlink:href="images/sprite.svg#social-linkedin"></use>
               </svg>
             </a>
-            <a href="">
+            <a href="https://www.youtube.com/" target="_blank">
               <svg class="icon-social">
                 <use xlink:href="images/sprite.svg#social-youtube"></use>
               </svg>
