Changed testimonial text.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               </div>
             </div>
             <div  class="testimonial-content-wrap">
-              <p class="testimonial__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing posuere ac aliquam et tristique molestie. Neque ac sed nibh commodo viverra ornare lectus. Tellus rhoncus fermentum lacinia viverra augue sollicitudin.</p>
+              <p class="testimonial__description">I’ve used Mira for all our projects over the last five years. It's an incredible software that suits all our needs. We have become more productive and efficient because of it. Highly recommended.</p>
               <div>
                 <p class="testimonial__name">Mark Patel</p>
                 <p class="testimonial__title">Senior Vice President</p>
