Changed wording of basic and standard plans.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="card card--primary">
               <header class="card__header">
                 <h3 class="plan__name">Basic</h3>
-                <p class="plan__short-description">For hardcore teams</p>
+                <p class="plan__short-description">For starter teams</p>
                 <span class="plan__price">$15</span>
                 <span class="plan__billing-cycle">/month</span>
               </header>
@@ -290,7 +290,7 @@
             <div class="card card--primary">
               <header class="card__header">
                 <h3 class="plan__name">Standard</h3>
-                <p class="plan__short-description">For hardcore teams</p>
+                <p class="plan__short-description">For established teams</p>
                 <span class="plan__price">$18</span>
                 <span class="plan__billing-cycle">/month</span>
               </header>
