Added section links to nav items.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <use xlink:href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="">Features</a></li>
-          <li class="nav__item"><a href="">Plans</a></li>
+          <li class="nav__item"><a href="#features">Features</a></li>
+          <li class="nav__item"><a href="#plans-section">Plans</a></li>
           <li class="nav__item">
             <a href=""><div class="btn">Get Started</div></a>
           </li>
@@ -104,7 +104,7 @@
       </div>
     </section>
     <main>
-      <section class="features container">
+      <section id ="features" class="features container">
         <h2 class="features__heading">
           Project Management Like You’ve<br/>Never Experienced Before
         </h2>
@@ -239,7 +239,7 @@
           </div>
         </div>
       </section>
-      <section class="plans container">
+      <section id="plans-section" class="plans container">
         <div class="grid plans-grid">
           <div class="plan">
             <div class="card card--primary">
